# vincio

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MIGRATION.md  README.md  ROADMAP.md  SECURITY.md  TESTING.md  llms.txt  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml  wiki-sync.yml
benchmarks/: METHODOLOGY.md  PROVENANCE.md  README.md  _manifest.py  bench.py  budgets.json  check_budgets.py  competitive.py  eval_live.py  lager_residuals.py  lager_uplift_live.py  manifest.json  profile_stages.py  quality_uplift.py  rag_anchor_uplift_live.py  reasoning_multilingual_live.py  reasoning_uplift_live.py  render_assets.py  slos.json  vinciobench.py  web_uplift_live.py
benchmarks/fixtures/: README.md  agentbench.json  bfcl.json  bird.json  dabench.json  ds_1000.json  gaia.json  infiagent_dabench.json  integrations.json  livecodebench.json  mmlu_pro.json  spider.json  swebench_verified.json  tau_bench.json  toolbench.json  webarena.json
benchmarks/reference/: live_snapshot.json
docs/: README.md  getting-started.md  learning-path.md
docs/comparisons/: crewai.md  deepeval.md  dspy.md  guardrails.md  langchain.md  langsmith-langfuse.md  litellm.md  llamaindex.md  mem0.md  nemo-guardrails.md  openai-agents-sdk.md  pydantic-ai.md  ragas.md  ragatouille.md
docs/concepts/: agents.md  big-brain.md  charts-and-cited-artifacts.md  compile-receipt.md  context-anchors.md  context-packets.md  data-analysis-agent.md  data-engagement.md  dataset-profiling.md  ergonomic-surface.md  evals.md  federated-data-engagement.md  governed-text-to-query.md  lager.md  memory.md  observability.md  open-evaluation-plane.md  prompt-compiler.md  realtime-streaming-analytics.md  retrieval.md  semantic-layer-and-governed-metrics.md  streaming-and-out-of-core.md  tabular-evidence.md  universal-reasoning.md  web-browsing.md
docs/guides/: a2a.md  add-tools.md  agent-fabric.md  agent-identity.md  agent-skills.md  agentic-eval.md  analyze-data.md  assistant.md  assurance.md  build-rag-app.md  choreography.md  close-the-loop.md  compile-receipt.md  computer-use.md  connectors.md  cookbook.md  cost-and-reliability.md  differential-privacy.md  edge.md  generate-documents.md  governance-verification.md  governance.md  integrations.md  mcp.md  migrate-from-langchain.md  migrate-from-llamaindex.md  migrate-from-mem0.md  migrate-from-ragas.md  negotiation.md  optimize-context.md  orchestrate-agents.md  performance.md  plugins.md  realtime.md  reasoning.md  reliability-guardrails.md  run-benchmark-suite.md  run-evals.md  settlement.md  skill-acquisition.md  (+6 more)
docs/reference/: api-generated.md  api.md  capability-map.md  cli.md  config.md  error-contract.txt  errors.md  public-surface.txt  reachability.txt  slo.md  stability.md  subpackage-surface.txt  typing.md
docs/security/: threat-model.md
examples/: 00_one_liners.py  01_quickstart.py  01_support_triage.py  02_document_qa.py  02_retrieval_rag.py  03_contract_review.py  03_memory.py  04_agents_and_tools.py  04_invoice_extraction.py  05_orchestration.py  05_research_agent.py  06_crm_agent.py  06_structured_output.py  07_codebase_qa.py  07_evaluation_observability.py  08_optimization_self_improvement.py  08_spreadsheet_analysis.py  09_eval_pipeline.py  09_security_governance.py  10_interop_and_protocols.py  10_optimization_run.py  11_advanced_context.py  11_streaming_performance.py  12_advanced_rag.py  12_cross_org_economy.py  13_data_and_analytics.py  13_memory_personalization.py  13_tabular_evidence.py  14_dataset_profiling.py  14_evaluation_observability.py  14_model_pricing_registry.py  15_connected_docs.py  15_governed_text_to_query.py  15_multi_agent_crew.py  16_data_analysis_agent.py  16_durable_graph.py  16_open_evaluation_plane.py  17_charts_cited_artifacts.py  17_compile_receipt.py  17_reliable_structured_output.py  (+95 more)
examples/applications/: README.md
examples/notebooks/: 01_quickstart.ipynb  02_rag.ipynb  03_agents_and_tools.ipynb  04_evaluation.ipynb  05_data_analysis.ipynb  06_notebook_native_analysis.ipynb  README.md
scripts/: sync_wiki.py
tests/: conftest.py  test_a2a.py  test_adaptive_sampling.py  test_admission.py  test_agent_memory_os.py  test_agent_os_1_10.py  test_agent_registry.py  test_agentic_eval.py  test_agents_workflows.py  test_agui_streaming.py  test_api_reference.py  test_arbitration.py  test_assert_robustness.py  test_assistant.py  test_assurance.py  test_attestation.py  test_attestation_exchange.py  test_audit_signing.py  test_audit_signing_2_0.py  test_benchmark_adapters.py  test_benchmark_live.py  test_benchmark_manifest.py  test_benchmark_tracks.py  test_canonical_json_goldens.py  test_causal_attribution.py  test_choreography.py  test_cli_professionalism.py  test_cli_scaffold.py  test_closed_loop.py  test_collateral.py  test_community_registry.py  test_compile_receipt.py  test_computer_environment.py  test_computer_use_isolation.py  test_config_migrations.py  test_connectors.py  test_content_hash_alias.py  test_context.py  test_context_anchors.py  test_continual_loop.py  (+189 more)
tests/golden/: agentic_eval.jsonl  docs_qa.jsonl  extraction.jsonl  support_triage.jsonl
vincio/: __init__.py  _apiref.py  _assert_robustness.py  _docmap.py  _error_contract.py  _guard_scope.py  _observable_failure.py  _reachability.py  _surface.py  _wire_or_retire.py  assistant.py  notebook.py  plugins.py  stability.py  tui.py
vincio/a2a/: __init__.py  client.py  protocol.py  server.py  transport.py
vincio/agents/: __init__.py  backends.py  blackboard.py  compaction.py  compose.py  crew.py  dag.py  distributed.py  executor.py  graph.py  handoffs.py  hierarchical.py  planner.py  reasoning.py  repair.py  research.py  scheduling.py  selection.py  state.py  timers.py  universal_reasoning.py  world_model.py
vincio/assurance/: __init__.py  case.py  certification.py  evidence.py  incident.py
vincio/caching/: __init__.py  base.py  compilation.py  invalidation.py  kvreuse.py  layers.py  (+2 more)
(+442 files in other folders)
