[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vincio"
version = "0.1.0"
description = "Vincio: the context engineering platform for AI applications. Compiles prompts, memory, retrieval, tools, schemas, and policies into optimized, validated, observable model-ready context packets."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Vincio Contributors" }]
keywords = [
  "llm", "ai", "context-engineering", "rag", "agents", "prompts",
  "evaluation", "observability", "structured-output",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.5",
  "httpx>=0.27",
  "typing-extensions>=4.8",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
google = ["google-genai>=0.3"]
mistral = ["mistralai>=1.0"]
tokenizers = ["tiktoken>=0.7"]
retrieval = ["qdrant-client>=1.9", "rank-bm25>=0.2"]
graph = ["neo4j>=5.0", "networkx>=3.0"]
postgres = ["psycopg[binary]>=3.1", "pgvector>=0.2"]
duckdb = ["duckdb>=0.10"]
redis = ["redis>=5.0"]
otel = ["opentelemetry-api>=1.24", "opentelemetry-sdk>=1.24"]
server = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic-settings>=2.2"]
pdf = ["pypdf>=4.0"]
docx = ["python-docx>=1.1"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.9",
]
all = [
  "vincio[openai,anthropic,google,mistral,tokenizers,retrieval,graph,postgres,duckdb,redis,otel,server,pdf,docx]",
]

[project.scripts]
vincio = "vincio.cli.main:main"

[project.urls]
Homepage = "https://github.com/Ohswedd/vincio"
Documentation = "https://github.com/Ohswedd/vincio/tree/main/docs"
Repository = "https://github.com/Ohswedd/vincio"
Issues = "https://github.com/Ohswedd/vincio/issues"
Changelog = "https://github.com/Ohswedd/vincio/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["vincio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
