[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vincio"
version = "3.17.0"
description = "Vincio: the context engineering platform for AI applications. Compiles prompts, memory, retrieval, tools, schemas, and policies into optimized, validated, observable model-ready context packets."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Vincio Contributors" }]
keywords = [
  "llm", "ai", "context-engineering", "rag", "agents", "prompts",
  "evaluation", "observability", "structured-output",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "pydantic>=2.5",
  "httpx>=0.27",
  "typing-extensions>=4.8",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.40"]
anthropic = ["anthropic>=0.34"]
google = ["google-genai>=0.3"]
mistral = ["mistralai>=1.0"]
tokenizers = ["tiktoken>=0.7"]
retrieval = ["qdrant-client>=1.9", "rank-bm25>=0.2"]
graph = ["neo4j>=5.0", "networkx>=3.0"]
s3 = ["boto3>=1.34"]
gcs = ["google-cloud-storage>=2.16"]
postgres = ["psycopg[binary]>=3.1", "pgvector>=0.2"]
duckdb = ["duckdb>=0.10"]
redis = ["redis>=5.0"]
chroma = ["chromadb>=0.5"]
pinecone = ["pinecone>=5.0"]
lancedb = ["lancedb>=0.10"]
weaviate = ["weaviate-client>=4.5"]
milvus = ["pymilvus>=2.4"]
elasticsearch = ["elasticsearch>=8.0"]
opensearch = ["opensearch-py>=2.4"]
vespa = ["pyvespa>=0.40"]
otel = ["opentelemetry-api>=1.24", "opentelemetry-sdk>=1.24"]
server = ["fastapi>=0.110", "uvicorn>=0.29", "pydantic-settings>=2.2"]
pdf = ["pypdf>=4.0"]
pdf-layout = ["pdfplumber>=0.11"]
docx = ["python-docx>=1.1"]
realtime = ["websockets>=12.0"]
langchain = ["langchain-core>=0.3"]
llamaindex = ["llama-index-core>=0.11"]
haystack = ["haystack-ai>=2.0"]
dspy = ["dspy-ai>=2.4"]
# data-warehouse connectors (REST connectors run on the core httpx dependency)
bigquery = ["google-cloud-bigquery>=3.0"]
snowflake = ["snowflake-connector-python>=3.0"]
# 1.9 — documents & images flow OUT (generation + richer inputs)
gen-docx = ["python-docx>=1.1"]
gen-pdf = ["reportlab>=4.0"]
gen-pptx = ["python-pptx>=0.6"]
ocr = ["pypdfium2>=4.0", "pytesseract>=0.3", "pillow>=10.0"]
parquet = ["pyarrow>=14.0"]
msg = ["extract-msg>=0.48"]
# 1.10 — computer-use / agentic browsing (real browser backend)
computer-use = ["playwright>=1.40"]
# 2.1 — batteries-included local neural models (air-gapped / edge inference)
fastembed = ["fastembed>=0.3"]
splade = ["transformers>=4.40"]
cross-encoder = ["sentence-transformers>=3.0"]
gguf = ["llama-cpp-python>=0.2"]
local-neural = ["fastembed>=0.3", "sentence-transformers>=3.0", "llama-cpp-python>=0.2"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "ruff>=0.4",
  "mypy>=1.9",
]
all = [
  "vincio[openai,anthropic,google,mistral,tokenizers,retrieval,graph,s3,gcs,postgres,duckdb,redis,chroma,pinecone,lancedb,weaviate,milvus,elasticsearch,opensearch,vespa,otel,server,pdf,pdf-layout,docx,realtime,langchain,llamaindex,haystack,dspy,bigquery,snowflake,gen-docx,gen-pdf,gen-pptx,ocr,parquet,msg,computer-use,fastembed,splade,cross-encoder,gguf]",
]

[project.scripts]
vincio = "vincio.cli.main:main"

[project.entry-points.pytest11]
vincio = "vincio.testing.plugin"

[project.urls]
Homepage = "https://github.com/Ohswedd/vincio"
Documentation = "https://github.com/Ohswedd/vincio/tree/main/docs"
Repository = "https://github.com/Ohswedd/vincio"
Issues = "https://github.com/Ohswedd/vincio/issues"
Changelog = "https://github.com/Ohswedd/vincio/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["vincio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

# Strict-typing ladder. The whole package is type-checked and ships `py.typed`,
# so downstream checkers see Vincio's inline contract. These modules are
# additionally held to `mypy --strict`; the set grows over time and new modules
# ship strict. The regular `mypy vincio` CI job tightens these modules via the
# overrides below, and a dedicated `mypy --strict` step double-checks the set.
[[tool.mypy.overrides]]
module = [
  "vincio.stability",
  "vincio.core.errors",
  "vincio.core.error_catalog",
  "vincio.core.config",
  "vincio.core.config_migrations",
  "vincio._apiref",
  "vincio.cli.doctor",
  "vincio.context.longhorizon",
]
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
disallow_subclassing_any = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
strict_equality = true
extra_checks = true
